--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,10 @@ cmake_minimum_required(VERSION 3.10)
 project(cbittorrent)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 set(CMAKE_CXX_STANDARD c99)
+add_definitions("-Wall -g")
+set(CMAKE_BUILD_TOOL Debug)
+
+find_package(OpenSSL REQUIRED )
 
 
 add_executable(
@@ -11,3 +15,5 @@ add_executable(
   main.c
   torrentfile.c
 )
+
+target_link_libraries(${PROJECT_NAME} OpenSSL::SSL OpenSSL::Crypto)
